# UPCCodes

./: .gitignore  README.md
Files/: UPC Code Extraction.mhtml  carelabel.json  carelabel.py  pdf_classifier.py  rfid.json  rfid.py  split_care_labels.py  upc sample (1).xlsx  upc sample.xlsx
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/extractors/: carelabel.py  rfid.py
backend/infra/terraform/: iam-policy.json  main.tf  outputs.tf  terraform.tfvars  variables.tf
backend/pdf_extractor_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  api.ts  index.css  styles.css
sample files/: upc sample.xlsx
upc-validator/backend/: .gitignore  README.md  pyproject.toml
upc-validator/backend/app/: main.py  validation.py
upc-validator/backend/app/extractors/: carelabel.py  classifier.py  common.py  rfid.py
upc-validator/frontend/: index.html  package-lock.json  package.json
upc-validator/frontend/src/: App.tsx  api.ts  styles.css
upc-validator/frontend/src/types/: xlsx-js-style.d.ts
